--- a/pom.xml
+++ b/pom.xml
@@ -2,33 +2,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>jackson-json-reference</name>
-    <groupId>me.andrz.jackson</groupId>
+    <groupId>io.github.nickgibbon</groupId>
     <artifactId>jackson-json-reference</artifactId>
     <version>0.3.3-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <url>https://github.com/AndersDJohnson/jackson-json-reference</url>
+    <url>https://github.com/nickgibbon/jackson-json-reference</url>
     <description>JSON Reference for Java with Jackson.</description>
     <modules>
         <module>jackson-json-reference-core</module>
         <module>jackson-json-reference-cli</module>
     </modules>
     <properties>
-        <github.user>AndersDJohnson</github.user>
+        <github.user>nickgibbon</github.user>
         <github.repo>jackson-json-reference</github.repo>
     </properties>
     <developers>
         <developer>
-            <id>AndersDJohnson</id>
-            <name>Anders D. Johnson</name>
-            <url>https://andrz.me</url>
-            <email>anders.d.johnson.developer@gmail.com</email>
+            <id>nickgibbon</id>
+            <name>Nicholas Ring</name>
             <roles>
                 <role>developer</role>
             </roles>
-            <timezone>America/Chicago</timezone>
-            <properties>
-                <picUrl>https://www.gravatar.com/avatar/5c44acedb08657aa1bdfc5524e71ff53</picUrl>
-            </properties>
+            <timezone>Australia/Melbourne</timezone>
         </developer>
     </developers>
     <licenses>
@@ -90,6 +85,7 @@
                 <version>2.10.3</version>
                 <configuration>
                     <failOnError>false</failOnError>
+                    <source>1.8</source>
                 </configuration>
                 <executions>
                     <execution>
@@ -135,6 +131,7 @@
                         <version>2.10.1</version>
                         <configuration>
                             <failOnError>false</failOnError>
+                            <source>1.8</source>
                         </configuration>
                         <executions>
                             <execution>
