--- a/jackson-json-reference-cli/pom.xml
+++ b/jackson-json-reference-cli/pom.xml
@@ -4,13 +4,13 @@
     <name>jackson-json-reference-cli</name>
     <groupId>io.github.nickgibbon</groupId>
     <artifactId>jackson-json-reference-cli</artifactId>
-    <version>0.3.4</version>
+    <version>0.3.5-SNAPSHOT</version>
     <url>https://github.com/nickgibbon/jackson-json-reference</url>
     <description>JSON Reference for Java with Jackson.</description>
     <parent>
         <groupId>io.github.nickgibbon</groupId>
         <artifactId>jackson-json-reference</artifactId>
-        <version>0.3.4</version>
+        <version>0.3.5-SNAPSHOT</version>
     </parent>
     <properties>
         <github.user>nickgibbon</github.user>
@@ -43,7 +43,7 @@
         <connection>scm:git:https://github.com/${github.user}/${github.repo}.git</connection>
         <developerConnection>scm:git:git@github.com:${github.user}/${github.repo}.git</developerConnection>
         <url>https://github.com/${github.user}/${github.repo}</url>
-        <tag>jackson-json-reference-0.3.4</tag>
+        <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
@@ -226,7 +226,7 @@
         <dependency>
             <groupId>io.github.nickgibbon</groupId>
             <artifactId>jackson-json-reference-core</artifactId>
-            <version>0.3.4</version>
+            <version>0.3.5-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
