--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <name>jackson-json-reference</name>
     <groupId>io.github.nickgibbon</groupId>
     <artifactId>jackson-json-reference</artifactId>
-    <version>0.3.5-SNAPSHOT</version>
+    <version>0.3.5</version>
     <packaging>pom</packaging>
     <url>https://github.com/nickgibbon/jackson-json-reference</url>
     <description>JSON Reference for Java with Jackson.</description>
@@ -43,7 +43,7 @@
         <connection>scm:git:https://github.com/${github.user}/${github.repo}.git</connection>
         <developerConnection>scm:git:git@github.com:${github.user}/${github.repo}.git</developerConnection>
         <url>https://github.com/${github.user}/${github.repo}</url>
-        <tag>HEAD</tag>
+        <tag>jackson-json-reference-0.3.5</tag>
     </scm>
     <distributionManagement>
         <snapshotRepository>
