--- a/jackson-json-reference-core/pom.xml
+++ b/jackson-json-reference-core/pom.xml
@@ -5,14 +5,14 @@
     <name>jackson-json-reference-core</name>
     <groupId>io.github.nickgibbon</groupId>
     <artifactId>jackson-json-reference-core</artifactId>
-    <version>0.3.6</version>
+    <version>0.3.7-SNAPSHOT</version>
     <url>https://github.com/nickgibbon/jackson-json-reference</url>
     <description>JSON Reference for Java with Jackson.</description>
 
     <parent>
         <groupId>io.github.nickgibbon</groupId>
         <artifactId>jackson-json-reference</artifactId>
-        <version>0.3.6</version>
+        <version>0.3.7-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -49,7 +49,7 @@
         <connection>scm:git:https://github.com/${github.user}/${github.repo}.git</connection>
         <developerConnection>scm:git:git@github.com:${github.user}/${github.repo}.git</developerConnection>
         <url>https://github.com/${github.user}/${github.repo}</url>
-        <tag>jackson-json-reference-0.3.6</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
